--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,32 +1,32 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-header{
-    height: 18vh;
-   background-color: #1B263B;
-    display: flex;
-    flex-direction: row;
-   align-items: center;
-   justify-content: space-around;
+header {
+  height: 18vh;
+  background-color: #1b263b;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
-a{
-    color: aliceblue;
+a {
+  color: aliceblue;
 }
-ul{
-    display: flex;
-   justify-content: center;
+ul {
+  display: flex;
+  justify-content: center;
   list-style-type: none;
 }
 
 header img {
-    width: 4rem;
-    margin-left: 1.4rem;
+  width: 4rem;
+  margin-left: 1.4rem;
 }
 
-li{
-    padding-right: .2rem;
-    margin: .5rem;
+li {
+  padding-right: .2rem;
+  margin: .5rem;
 }
