Fix conflicts and bug

--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -25,7 +25,7 @@ p {
   font-family: "Lato", sans-serif;
 }
 
-main {
+.movieContainer {
   padding-top: 50px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
