--- a/client/src/components/animeList.css
+++ b/client/src/components/animeList.css
@@ -1,26 +1,19 @@
 .animeContainer {
-  max-width: 100%;
-  margin: 0 auto;
+  margin: auto;
   text-align: center;
 }
 .animePicture {
-  width: 23rem;
+  width: 100%;
 }
 
 h1 {
   font-size: 24px;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .anime-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
-  list-style: none;
-  padding: 0;
-  justify-items: center;
-}
-
-.anime-card {
-  max-width: 23rem;
+  gap: 1rem;
 }
