--- a/client/src/components/animeCard.css
+++ b/client/src/components/animeCard.css
@@ -4,7 +4,7 @@
   border-radius: 1.8rem;
   overflow: hidden;
 }
-figcaption {
+.figcaptionAnime {
   display: none;
   flex-direction: column;
   justify-content: center;
