responsive header and add menu burger

--- a/client/src/CssComponents/CarousselsHomePage.css
+++ b/client/src/CssComponents/CarousselsHomePage.css
@@ -105,3 +105,9 @@ body {
 .slick-prev:before {
   color: white;
 }
+@media screen and (max-width: 480px) {
+  * {
+    box-sizing: border-box;
+    margin: revert;
+  }
+}
