anime and series pages reworked

--- a/client/src/components/AnimsList/OldanimeList.css
+++ b/client/src/components/AnimsList/OldanimeList.css
@@ -1,4 +1,4 @@
-.animeContainer {
+/* .animeContainer {
   width: 95%;
   margin-left: 3rem;
 }
@@ -17,4 +17,4 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-}
+} */
