--- a/client/src/CssComponents/CarousselsHomePage.css
+++ b/client/src/CssComponents/CarousselsHomePage.css
@@ -11,83 +11,72 @@ body {
   );
 }
 
-.container1 {
-  position: relative;
+* {
+  box-sizing: border-box;
 }
-
-.movie-img {
-  width: 100%;
-  height: auto;
-  display: block;
-  transition: opacity 0.3s ease;
-}
-
-.overview {
-  font-family: "Host Grotesk", sans-serif;
-  position: absolute;
-  border-radius: 10px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: whitesmoke;
-  background-color: rgba(0, 0, 0, 0.7);
-  font-size: 1.2rem;
-  width: 60%;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.5s ease;
-}
-
-.container1:hover .overview {
-  opacity: 0.7;
-}
-
-.container1:hover .movie-img {
-  opacity: 0.3;
-}
-
-.slick-slide {
-  text-align: center;
-  padding: 10px;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.slick-slide .movie-img {
-  width: 60%;
-  justify-self: center;
-}
-
 .title {
   font-family: "Sour Gummy", sans-serif;
   color: whitesmoke;
   font-size: 25px;
   margin-top: 2rem;
 }
-.movie-container {
-  border-radius: 10%;
+.slick-track {
+  display: flex;
+  gap: 20px;
 }
 
-.slider-container {
-  width: 60%;
-  margin: auto;
+.slick-slide .movie-img {
+  width: 50%;
+  height: 70%;
+  display: inline;
 }
 
 .slick-slide img {
-  width: 100%;
-  height: auto;
   border-radius: 15px;
-  transition: 0.7s ease-in-out;
+}
+.slick-next {
+  right: -40px;
+}
+.container1 {
+  position: relative;
+  overflow: hidden;
 }
 
-.slick-slide img:hover {
-  transform: scale(1.05);
+.movie-img {
+  transition: opacity 0.3s ease;
+}
+.overview {
+  align-items: center;
+}
+figcaption.overview {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  border-radius: 15px;
+  top: 0;
+  left: 25%;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.9s ease;
+  padding: 10px;
+}
+.container1:hover .movie-img {
+  opacity: 0.3;
 }
 
+.container1:hover .overview {
+  opacity: 1;
+}
 .slick-prev,
 .slick-next {
   border-radius: 50%;
-  font-size: 30px;
   width: 0px;
   z-index: 1;
   transition: opacity 0.3s ease;
@@ -104,4 +93,24 @@ body {
 }
 .slick-prev:before {
   color: white;
+}
+
+@media screen and (max-width: 480px) {
+  * {
+    box-sizing: border-box;
+    margin-right: 4px;
+  }
+
+  .slick-slide .movie-img {
+    justify-self: center;
+  }
+  figcaption.overview {
+    display: none;
+  }
+  .slick-slide .movie-img {
+    width: 70%;
+  }
+  .container1:hover .movie-img {
+    opacity: 1;
+  }
 }
