--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -17,7 +17,7 @@ h3 {
   margin-bottom: 2rem;
   margin-top: 2rem;
   font-family: "Sour Gummy", sans-serif;
-  text-align: center;
+  justify-self: center;
 }
 
 p {
@@ -65,6 +65,10 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.movie-hover-text p {
+  text-align: left;
 }
 
 .movieList:hover .movie-hover-text {
