--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -23,10 +23,10 @@ nav {
 }
 
 a {
-  font-family: "Sour Grummy", sans-serif;
+  font-family: var(--font-familly-title);
   text-decoration: none;
-  color: whitesmoke;
-  font-size: 1.2rem;
+  color: var(--primary-color);
+  font-size: var(--font-size);
 }
 
 header img {
@@ -41,7 +41,7 @@ header img {
     display: none;
   }
   header svg {
-    color: aliceblue;
+    color: var(--primary-color);
   }
   header .svg-inline--fa {
     display: flex;
@@ -49,7 +49,7 @@ header img {
   }
   .listHamburger {
     display: none;
-    color: aliceblue;
+    color: var(--primary-color);
     position: absolute;
     top: 69px;
     right: 0px;
