--- a/client/src/components/SeriesList/style.css
+++ b/client/src/components/SeriesList/style.css
@@ -5,14 +5,9 @@
 }
 
 body {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    0deg,
-    rgba(2, 0, 36, 0.9780287114845938) 0%,
-    rgba(255, 0, 56, 0.908000700280112) 44%,
-    rgba(2, 0, 36, 1) 100%
-  );
-  color: #f2f5ea;
+  background: var(--background-color-second);
+  background: var(--background-color);
+  color:var(--primary-color);
 }
 
 h1,
@@ -20,11 +15,11 @@ h2,
 h3 {
   margin-bottom: 2rem;
   margin-top: 2rem;
-  font-family: "Sour Gummy", sans-serif;
+  font-family: var(--font-familly-title);
 }
 
 p {
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-familly);
 }
 
 .seriesContainer {
@@ -62,8 +57,8 @@ p {
   position: absolute;
   top: 0;
   width: 100%;
-  color: white;
-  font-size: 1.2rem;
+  color: var(--primary-color);
+  font-size: var(--font-size);
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -91,13 +86,13 @@ button {
   margin: 30px;
   border-radius: 15px;
   border: 0px;
-  color: black;
-  background-color: whitesmoke;
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
   transition: 0.5s;
-  font-size: 1rem;
+  font-size: var(--font-size);
 }
 
 button:hover {
-  background-color: lightgray;
+  background-color: var(--primary-color);
   transform: scale(1.1);
 }
