Add FavButton on MovieList

--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -59,6 +59,11 @@ p {
   align-items: center;
 }
 
+.FavIcone {
+  z-index: -100;
+  height: auto;
+}
+
 .movie-hover-text p {
   text-align: left;
 }
