--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -17,7 +17,9 @@ h3 {
 p {
   font-family: "Lato", sans-serif;
 }
-
+.watchlistTitle {
+  grid-column: span 3;
+}
 .movieContainer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
