Add Delete Button for WatchList

--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -8,8 +8,6 @@ body {
 h1,
 h2,
 h3 {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
   font-family: "Sour Gummy", sans-serif;
   justify-self: center;
 }
@@ -47,23 +45,34 @@ p {
 
 .movie-content {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .movie-hover-text {
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 80%;
   color: white;
-  font-size: 1.2rem;
   font-weight: bold;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding-left: 1rem;
 }
 
+.movie-hover-text h2 {
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem;
+}
 .FavIcone {
   z-index: -100;
-  height: auto;
+  border-radius: 40%;
+  border: 0px solid;
+  align-self: flex-end;
+  margin: auto;
+  margin-top: 0.5rem;
 }
 
 .movie-hover-text p {
@@ -97,45 +106,31 @@ label {
   align-items: center;
 }
 
-button {
-  cursor: pointer;
-  width: 20%;
-  height: 50px;
-  margin: 30px;
-  border-radius: 15px;
-  border: 0px;
-  color: black;
-  background-color: whitesmoke;
-  transition: 0.5s;
-  font-size: 1rem;
-}
-
-.button:hover {
-  background-color: lightgray;
-  transform: scale(1.1);
-}
-
 @media screen and (max-width: 1024px) {
-  .movie-hover-text {
+  .movie-hover-text p {
     font-size: 1rem;
   }
   .movie-hover-text h2 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+  }
+  .FavIcone {
+    margin-top: 1rem;
+  }
+  .FavIcone img {
+    width: 50%;
+    height: 50%;
   }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 800px) {
   .movie-hover-text {
-    font-size: 0.7rem;
+    align-items: center;
   }
-  .movie-hover-text h2 {
+  .movie-hover-text p {
     font-size: 0.8rem;
   }
-  .movieContainer {
-    width: 100%;
-  }
-  .search {
-    width: 80%;
+  .movie-hover-text h2 {
+    font-size: 1rem;
   }
 }
 
@@ -143,18 +138,20 @@ button {
   .movieContainer {
     grid-template-columns: repeat(2, 1fr);
   }
-  .movieList {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-  }
   .movieList img {
-    width: 150px;
+    width: 100%;
   }
-  .movie-hover-text {
-    font-size: 0.40rem;
+  .movie-hover-text p {
+    font-size: 0.5rem;
   }
   .movie-hover-text h2 {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
+  }
+  .FavIcone img {
+    width: 50%;
+    height: 50%;
+  }
+  .search {
+    width: 80%;
   }
 }
