--- a/client/src/CssComponents/CarousselsHomePage.css
+++ b/client/src/CssComponents/CarousselsHomePage.css
@@ -5,13 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    0deg,
-    rgba(2, 0, 36, 0.9780287114845938) 0%,
-    rgba(255, 0, 56, 0.908000700280112) 44%,
-    rgba(2, 0, 36, 1) 100%
-  );
+  background-color: #fdfff7;
 }
 .home-movieList {
   overflow: hidden;
