--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -93,10 +93,12 @@ p {
   border: 0px solid;
   text-align: center;
   margin-bottom: 2rem;
+  box-shadow: 1px 1px 5px #0000004f;
 }
 
 label {
   margin-top: 1rem;
+  color: black;
 }
 
 .searchBarContainer {
