--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap");
 
 body {
-  background-color: #f1faee;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 0.9780287114845938) 0%,
+    #0f270baa 44%,
+    rgba(2, 0, 36, 1) 100%
+  );
   color: #f2f5ea;
 }
 
