back-ground change & responsive page about!

--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -19,7 +19,7 @@
   border: 0px solid black;
   box-shadow: 1px 1px 20px 1px #00000099;
   border-radius: 15px;
-  text-align: left;
+  text-align: center;
   padding: 1rem;
 }
 .members {
