--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -72,7 +72,7 @@ header img {
     height: 100vh;
     padding: 1rem;
     z-index: 999;
-    background: linear-gradient(0deg, rgb(41 3 17 / 80%) 0%, #000000a3);
+    background: linear-gradient(0deg, rgba(42, 62, 44, 0.664) 0%, #000000a3);
     border-radius: 1rem;
     box-shadow: -4px 4px 15px rgba(0, 0, 0, 0.753);
   }
