--- a/client/src/components/MovieList/style.css
+++ b/client/src/components/MovieList/style.css
@@ -10,7 +10,11 @@ body {
   );
   color: #f2f5ea;
 }
-
+a:hover {
+  letter-spacing: 7px;
+  transition: letter-spacing 0.6s ease;
+  color: rgba(0, 0, 255, 0.966);
+}
 h1,
 h2,
 h3 {
